# conversational-ai-core

./: ChangeImageTokenResolution.txt  Dockerfile  README.md  agent-patch.py  db-schema.txt  livekit.toml  pyproject.toml
src/: agent.py
src/app/: __init__.py  assistant.py  database.py  instructions.json  instructions.py  onboarding-instructions.json  onboarding_instructions.py  onboarding_routing_tools.py  routing_tools.py  session_manager.py  user_context.py
src/monitoring/: __init__.py  metrics.py
